# Gazebo

actuar_gazebo/: CMakeLists.txt  package.xml
actuar_gazebo/launch/: sim_world.launch.py
actuar_gazebo/src/: joint_plugin.cpp  light_plugin.cpp  sim_URDF.cpp  wrench_plugin.cpp  wrenches_plugin.cpp
actuar_gazebo/urdf/: model.xacro
actuar_gazebo/worlds/: empty.world
my_box_robot/: CMakeLists.txt  package.xml
my_box_robot/include/my_box_robot/: diff_drive_plugin.hpp
my_box_robot/launch/: sim_world.launch.py
my_box_robot/src/: diff_drive_plugin.cpp  sim_box_bot.cpp
my_box_robot/urdf/: Lidar_bot5.xacro  box_bot.xacro  camara_bot6.xacro  espinas_bot4.xacro  motoriced_bot.xacro  motoriced_bot3.xacro  wheeled_bot.xacro
my_quadracopter/: CMakeLists.txt  package.xml
my_quadracopter/launch/: sim_world.launch.py
my_quadracopter/src/: sim_quadcopter.cpp
my_quadracopter/urdf/: quadcopter.xacro
